footer alignment fixed

--- a/FED1StudioProject/css/custom.css
+++ b/FED1StudioProject/css/custom.css
@@ -141,6 +141,9 @@ footer {
     background-color: #121212;
     color: #f2f2f2;
     align-content: center;
+    vertical-align: middle;
+    display:inline-block;
+    width: 100%;
 }
 
     footer a {
